update UI for edit in menu_info page

--- a/lib/data/locale/arb/app_en.arb
+++ b/lib/data/locale/arb/app_en.arb
@@ -12,5 +12,6 @@
   "drinkType": "Type",
   "drinkTypeHot": "Hot",
   "drinkTypeIce": "Ice",
-  "drinkTypeFrappe": "Frappe"
+  "drinkTypeFrappe": "Frappe",
+  "menuInfoAddIngredient": "Add Ingredient"
 }
