--- a/lib/data/locale/arb/app_en.arb
+++ b/lib/data/locale/arb/app_en.arb
@@ -1,17 +1,35 @@
 {
   "@@locale": "en",
   "appTitle": "Drink Recipe",
-  "menuListAppBarTitle": "List of Menu",
+  "listOfMenu": "List of Menu",
   "drinkCategories": "Categories",
-  "drinkCategorieAll": "All",
-  "drinkCategorieTea": "Tea",
-  "drinkCategorieCoffee": "Coffee",
-  "drinkCategorieSmoothies": "Smoothies",
-  "drinkCategorieSoda": "Soda",
-  "drinkCategorieOthers": "Others",
+  "drinkCategoryAll": "All",
+  "drinkCategoryTea": "Tea",
+  "drinkCategoryCoffee": "Coffee",
+  "drinkCategorySmoothies": "Smoothies",
+  "drinkCategorySoda": "Soda",
+  "drinkCategoryOthers": "Others",
   "drinkType": "Type",
   "drinkTypeHot": "Hot",
   "drinkTypeIce": "Ice",
   "drinkTypeFrappe": "Frappe",
-  "menuInfoAddIngredient": "Add Ingredient"
+  "edit": "Edit",
+  "save": "Save",
+  "cancel": "Cancel",
+  "delete": "Delete",
+  "editMenu": "Edit Menu",
+  "deleteMenu": "Delete Menu",
+  "addImage": "Add Image",
+  "changeImage": "Change Image",
+  "deleteImage": "Delete Image",
+  "menuName": "Menu Name",
+  "menuNameTh": "Thai Menu Name",
+  "menuNameEn": "English Menu Name",
+  "ingredientOption": "Ingredient Option",
+  "ingredientOptionName": "Ingredient Option Name",
+  "addIngredient": "Add Ingredient",
+  "ingredient": "Ingredient",
+  "ingredientName": "Ingredient Name",
+  "volume": "Volume",
+  "unit": "Unit"
 }
