--- a/lib/data/locale/arb/app_th.arb
+++ b/lib/data/locale/arb/app_th.arb
@@ -1,17 +1,35 @@
 {
   "@@locale": "th",
   "appTitle": "สูตรเครื่องดื่ม",
-  "menuListAppBarTitle": "รายการเมนู",
+  "listOfMenu": "รายการเมนู",
   "drinkCategories": "ประเภทเครื่องดื่ม",
-  "drinkCategorieAll": "ทั้งหมด",
-  "drinkCategorieTea": "ชา",
-  "drinkCategorieCoffee": "กาแฟ",
-  "drinkCategorieSmoothies": "สมูทตี้",
-  "drinkCategorieSoda": "โซดา",
-  "drinkCategorieOthers": "อื่นๆ",
+  "drinkCategoryAll": "ทั้งหมด",
+  "drinkCategoryTea": "ชา",
+  "drinkCategoryCoffee": "กาแฟ",
+  "drinkCategorySmoothies": "สมูทตี้",
+  "drinkCategorySoda": "โซดา",
+  "drinkCategoryOthers": "อื่นๆ",
   "drinkType": "ประเภท",
   "drinkTypeHot": "ร้อน",
   "drinkTypeIce": "เย็น",
   "drinkTypeFrappe": "ปั่น",
-  "menuInfoAddIngredient": "เพิ่มวัตถุดิบใหม่"
+  "edit": "แก้ไข",
+  "save": "บันทึก",
+  "cancel": "ยกเลิก",
+  "delete": "ลบ",
+  "editMenu": "แก้ไขเมนูนี้",
+  "deleteMenu": "ลบเมนูนี้",
+  "addImage": "เพิ่มรูปภาพ",
+  "changeImage": "เปลี่ยนรูปภาพ",
+  "deleteImage": "ลบรูปภาพ",
+  "menuName": "ชื่อเมนู",
+  "menuNameTh": "ชื่อเมนูภาษาไทย",
+  "menuNameEn": "ชื่อเมนูภาษาอังกฤษ",
+  "ingredientOption": "ตัวเลือกวัตถุดิบ",
+  "ingredientOptionName": "ชื่อตัวเลือกวัตถุดิบ",
+  "addIngredient": "เพิ่มวัตถุดิบใหม่",
+  "ingredient": "วัตถุดิบ",
+  "ingredientName": "ชื่อวัตถุดิบ",
+  "volume": "ปริมาณ",
+  "unit": "หน่วย"
 }
