--- a/lib/data/locale/arb/app_th.arb
+++ b/lib/data/locale/arb/app_th.arb
@@ -13,6 +13,7 @@
   "drinkTypeHot": "ร้อน",
   "drinkTypeIce": "เย็น",
   "drinkTypeFrappe": "ปั่น",
+  "confirm": "ยืนยัน",
   "edit": "แก้ไข",
   "save": "บันทึก",
   "cancel": "ยกเลิก",
@@ -30,6 +31,10 @@
   "addIngredient": "เพิ่มวัตถุดิบใหม่",
   "ingredient": "วัตถุดิบ",
   "ingredientName": "ชื่อวัตถุดิบ",
+  "ingredientNameValidate": "ต้องมีชื่อวัตถุดิบ",
   "volume": "ปริมาณ",
-  "unit": "หน่วย"
+  "unit": "หน่วย",
+  "modalCancelChangeTitle": "ข้อมูลจะไม่ถูกบันทึก!?",
+  "dialogConfirmDeleteTitle": "ยืนยันการลบ!?",
+  "dialogConfirmDeleteContent": "กรุณากดยืนยันเพื่อทำการลบ"
 }
